--- a/flex.html
+++ b/flex.html
@@ -7,18 +7,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flex</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS\style.css">
+    <link rel="icon" href="IMG\favicon.ico">
 </head>
 
 <body>
     <div class="pagecontentflex">
-        <p class="bananbox">-Mají výsoký obsah vlákniny<br>-Jsou skvělé jako preworkout<br>-Disponují vynikající chutí<br>-Ideální pro bulkování</p>
-        <p class="bananbox">-Mají výsoký obsah vlákniny<br>-Jsou skvělé jako preworkout<br>-Disponují vynikající
-            chutí<br>-Ideální pro bulkování</p>
-        <p class="bananbox">-Mají výsoký obsah vlákniny<br>-Jsou skvělé jako preworkout<br>-Disponují vynikající
-            chutí<br>-Ideální pro bulkování</p>
-        <p class="bananbox">-Mají výsoký obsah vlákniny<br>-Jsou skvělé jako preworkout<br>-Disponují vynikající
-            chutí<br>-Ideální pro bulkování</p>
+        <div class=bananbox>
+            <p1>Mají vysoký obsah vlákniny</p1>
+            <p1>Jsou skvělé jako preworkout</p1>
+            <p1>Disponují vynikající chutí</p1>
+            <p>Ideální pro bulkování</p1>
+        </div>
+        <div class=bananbox>
+            <p1>Mají vysoký obsah vlákniny</p1>
+            <p1>Jsou skvělé jako preworkout</p1>
+            <p1>Disponují vynikající chutí</p1>
+            <p>Ideální pro bulkování</p1>
+        </div>
+        <div class=bananbox>
+            <p1>Mají vysoký obsah vlákniny</p1>
+            <p1>Jsou skvělé jako preworkout</p1>
+            <p1>Disponují vynikající chutí</p1>
+            <p>Ideální pro bulkování</p1>
+        </div>
+        <div class=bananbox>
+            <p1>Mají vysoký obsah vlákniny</p1>
+            <p1>Jsou skvělé jako preworkout</p1>
+            <p1>Disponují vynikající chutí</p1>
+            <p>Ideální pro bulkování</p1>
+        </div>
     </div>
 </body>
 
