--- a/flex.html
+++ b/flex.html
@@ -17,25 +17,25 @@
             <p1>Mají vysoký obsah vlákniny</p1>
             <p1>Jsou skvělé jako preworkout</p1>
             <p1>Disponují vynikající chutí</p1>
-            <p>Ideální pro bulkování</p1>
+            <p1>Ideální pro bulkování</p1>
         </div>
         <div class=bananbox>
             <p1>Mají vysoký obsah vlákniny</p1>
             <p1>Jsou skvělé jako preworkout</p1>
             <p1>Disponují vynikající chutí</p1>
-            <p>Ideální pro bulkování</p1>
+            <p1>Ideální pro bulkování</p1>
         </div>
         <div class=bananbox>
             <p1>Mají vysoký obsah vlákniny</p1>
             <p1>Jsou skvělé jako preworkout</p1>
             <p1>Disponují vynikající chutí</p1>
-            <p>Ideální pro bulkování</p1>
+            <p1>Ideální pro bulkování</p1>
         </div>
         <div class=bananbox>
             <p1>Mají vysoký obsah vlákniny</p1>
             <p1>Jsou skvělé jako preworkout</p1>
             <p1>Disponují vynikající chutí</p1>
-            <p>Ideální pro bulkování</p1>
+            <p1>Ideální pro bulkování</p1>
         </div>
     </div>
 </body>
