--- a/UI.html
+++ b/UI.html
@@ -7,10 +7,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UI</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="icon" href="IMG\favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="bodyui">
+        <div class="profilepicture">
+            <img src="/IMG/profilovka.png" alt="profilepicture">
+        </div>
+        <div class="biospace">
+            <h1>Jane</h1>
+            <h2>SAN FRANCISCO, CA</h2>
+        </div>
+        <div class="buttonspace">
+            <a class="followbutton" href="#">
+                <p>FOLLOW JANE</p>
+            </a>
+            <a class="messagebutton" href="#">
+                <p>MESSAGE</p>
+            </a> 
+        </div>
+        <div class="cardspace">
+            <div class="imgcard">
+                <img src="IMG/hedkazezadu.png">
+            </div>
+            <div class="imgcard">
+                <img src="IMG/hedkazepredu.png">
+            </div>
+        </div>
+        <div class="navbar">
+            <a href="#" class="homebutton">
+                <img src="/IMG/home.svg">
+            </a>
+            <a href="#" class="searchbutton">
+                <img src="IMG/magnifier.svg">
+            </a>
+            <a href="#" class="postbutton">
+                <img src="IMG/plus.svg">
+            </a>
+            <a href="#" class="textbutton">
+                <img src="IMG/bubble.svg">
+            </a>
+            <a href="#" class="settingbuttton">
+                <img src="IMG/user.svg">
+            </a>
+        </div>
+    </div>
 
 </body>
 
