--- a/grid.html
+++ b/grid.html
@@ -7,11 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" href="IMG\favicon.ico">
 </head>
-
 <body>
-
+    <div class="bodygrid">
+        <h1>Mých 12 fav bodybuilderů </h1>
+        <div class="pagecontentgrid">
+            <img src="IMG/GRID/dorit.jpg">
+            <img src="IMG/GRID/hercules.jpg">
+            <img src="IMG/GRID/jchm.jpg">
+            <img src="IMG/GRID/maldak.png">
+            <img src="IMG/GRID/skin.png">
+            <img src="IMG/GRID/štof.jpg">
+            <img src="IMG/GRID/aleš.jpg">
+            <img src="IMG/GRID/cbum.jpg">
+            <img src="IMG/GRID/double bic.PNG">
+            <img src="IMG/GRID/insane lat spred.jpg">
+            <img src="IMG/GRID/med.jpg">
+            <img src="IMG/GRID/luk.jpg">
+        </div>
+    </div>
 </body>
 
 </html>
