--- a/chania.html
+++ b/chania.html
@@ -7,11 +7,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chania</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="icon" href="IMG\favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
-
+<body class="bodychania">
+    <div class="pagecontentchania">
+        <div class="headerbox">
+            <h1>Chania</h1>
+        </div>
+        <div class="buttonboxchania">
+            <a href="#">
+                <p>The Flight</p>
+            </a>
+            <a href="#">
+                <p>The City</p>
+            </a>
+            <a href="#">
+                <p>The Island</p>
+            </a>
+            <a href="#">
+                <p>The Food</p>
+            </a>
+        </div>
+        <div class="textbox">
+            <h2>The City</h2>
+            <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+        </div>
+        <div class="infobox">
+            <h3>What?</h3>
+            <p>Chania is a city on the island of Crete.</p>
+            <h3>Where?</h3>
+            <p>Crete is a Greek island in the Mediterranean Sea.</p>
+            <h3>How?</h3>
+            <p>You can reach Chania airport from all over Europe</p>
+        </div>
+        <div class="footerbox>">
+            <footer>Resize the browser window to see how the content repond to the resizing.</footer>
+        </div>
+    </div>
 </body>
 
 </html>
